NATTQA-ENV/force-app/main/default/objects/NAC_Object_Mapping__mdt/NAC_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>NAC Object Mapping</label>
    <pluralLabel>NAC Object Mappings</pluralLabel>
</CustomObject>