NATTQA-ENV/force-app/main/default/objects/NAC_Object_Mapping__mdt/fields/Is_Line_Item_Field__c.field-meta.xml
<CustomField>
    <fullName>Is_Line_Item_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Line Item Field</label>
    <type>Checkbox</type>
</CustomField>