NATTQA-ENV/force-app/main/default/objects/NAC_Object_Mapping__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <length>50</length>
    <type>Text</type>
</CustomField>