NATTQA-ENV/force-app/main/default/objects/NAC_Object_Mapping__mdt/fields/Order_Summary__c.field-meta.xml
<CustomField>
    <fullName>Order_Summary__c</fullName>
    <label>Order Summary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>