NATTQA-ENV/force-app/main/default/objects/NAC_Object_Mapping__mdt/fields/Web_Cart__c.field-meta.xml
<CustomField>
    <fullName>Web_Cart__c</fullName>
    <label>Web Cart</label>
    <length>50</length>
    <type>Text</type>
</CustomField>